manifests/apps/nextcloud/deploy-patch-collabora.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-collabora
  namespace: nextcloud
  annotations:
    reloader.stakater.com/auto: "true"
