manifests/apps/nextcloud/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "nextcloud.ucdialplans.com"
  rules:
  - backendRefs:
    - name: nextcloud
      namespace: nextcloud
      kind: Service
      port: 8080
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        set:
        - name: Strict-Transport-Security
          value: "max-age=31536000; includeSubDomains; preload"

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: office
  namespace: nextcloud
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "office.ucdialplans.com"
  rules:
  - backendRefs:
    - name: nextcloud-collabora
      namespace: nextcloud
      kind: Service
      port: 9980
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        set:
        - name: Strict-Transport-Security
          value: "max-age=31536000; includeSubDomains; preload"
